--- a/index.html
+++ b/index.html
@@ -4,31 +4,11 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="stylesheet" type="text/css" href="./styles.css" />
-		<title>Post de instagram</title>
+		<title>generador de dominion</title>
 	</head>
 	<body>
-		<div id="publicacion">
-			<div class="preFoto">
-				<img src="https://pbs.twimg.com/profile_images/786097382438076416/cdJ27vzT_400x400.jpg" att="icono">
-				<p style="margin:0; flex-grow:1; padding:0 10px;"><strong>HTML5</strong><br>Gustavo</p>
-				<img src="https://cdn-icons-png.flaticon.com/512/5355/5355826.png" att="tres puntos">		
-			</div>	
-			<div class="fotoContainer">
-				<img class="Foto" src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/743350/ss_ede92fdd1e25eac89335cbaafd28b0c323702fde.600x338.jpg?t=1564816067">	
-			</div>
-			<div class="postFoto">
-				<div class="postFotoIconos">
-					<img src="https://cdn-icons-png.flaticon.com/512/535/535285.png" att="corazon">
-					<img src="https://cdn-icons-png.flaticon.com/512/2462/2462719.png" att="icono de burbuja de dialogo">
-					<img src="https://cdn-icons-png.flaticon.com/512/1159/1159724.png" att="avion de papel">
-					<img src="https://cdn-icons-png.flaticon.com/512/786/786251.png" att="marcador">
-				</div>
-				<div class="postFotoBody">
-					<p> Liked by <strong>4geeksAcademy, html5, Web </strong> and <strong>100,000 other</strong></p>
-					<p> En slay.one podrás jugar distintos modos de juego, entre estos el de zombies, sé el último en sobrevivir, colecta armas, has uniones, puedes construir tus propias fortalezas y hasta poner torretas </p>
-				</div>
-			</div>
-		</div>
-		
+		<h1>Dominos randoms</h1>
+		<h3><p class="generadorDeDominios"><p></h3>
+		<script src = "script.js"></script>
 	</body>
 </html>
